# doc-intelligence

./: .env.example  .gitignore  LICENSE  MANIFEST.in  Makefile  PLUGINS.md  PRIVACY.md  PUBLISHING.md  README.md  SECURITY.md  plan.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
config/: config.yaml
docs/site/: index.html  style.css
packaging/homebrew/: doc-intelligence.rb
scripts/: big_files.py  cleanup.py  cli.py  dashboard.py  find_duplicates.py  report.py  scan.py  search.py  watch.py
src/: __init__.py  ai.py  extractors.py  health.py  image_dedup.py  interactive.py  mcp_server.py  scanner.py  staging.py  storage.py  undo.py  utils.py  watcher.py
src/ai/: __init__.py  classification.py  embeddings.py  image_classify.py  insights.py  pii.py  providers.py  query.py  suggestions.py
src/analysis/: __init__.py  duplicates.py  health.py  image_dedup.py  undo.py
src/core/: __init__.py  config.py  database.py  models.py  platform.py
src/dashboard/: __init__.py  app.py
src/dashboard/components/: charts.py  metrics.py  tables.py
src/dashboard/pages/: analytics.py  duplicates.py  files.py  git_branches.py  health.py  images.py  license.py  overview.py  pii.py  search.py  settings.py  suggestions.py  tags.py
src/licensing/: __init__.py  keys.py  tiers.py
src/mcp/: __init__.py  server.py
src/onboarding/: __init__.py  wizard.py
src/providers/: __init__.py  builtin_classifier.py  builtin_embedding.py  builtin_extractor.py  builtin_llm.py  builtin_vectorstore.py  defaults.py  factory.py  interfaces.py  registry.py
src/scanner/: __init__.py  engine.py  extractors.py  watcher.py
src/telemetry/: __init__.py  tracker.py
tests/: conftest.py  test_ai.py  test_big_files.py  test_cli.py  test_cli_new.py  test_dashboard.py  test_dotenv.py  test_embeddings.py  test_enforcement.py  test_extractors.py  test_health.py  test_image_classify.py  test_image_dedup.py  test_interactive.py  test_licensing.py  test_mcp_server.py  test_pii.py  test_platform.py  test_providers.py  test_report.py  test_scanner.py  test_staging.py  test_storage.py  test_storage_tags.py  test_structured_outputs.py  test_suggestions.py  test_telemetry.py  test_undo.py  test_voyage.py  test_watcher.py
