[project]
name = "doc-intelligence"
version = "5.1.0"
description = "AI-powered file intelligence — your files, understood. Local-first scanning, smart tagging, PII detection, duplicate cleanup, and web dashboard."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
keywords = ["files", "duplicate-detection", "pii", "file-scanner", "ai", "duckdb", "search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Filesystems",
    "Topic :: Utilities",
]
dependencies = [
    "duckdb>=0.10.0",
    "xxhash>=3.4.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "tqdm>=4.66.0",
    "pypdf>=3.0.0",
    "watchdog>=3.0.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://doc-intelligence.dev"
Documentation = "https://github.com/user/doc-intelligence#readme"
Repository = "https://github.com/user/doc-intelligence"
Issues = "https://github.com/user/doc-intelligence/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]
images = [
    "imagehash>=4.3.0",
    "Pillow>=10.0.0",
]
dashboard = [
    "streamlit>=1.30.0",
    "pandas>=2.0.0",
]
ai = [
    "anthropic>=0.39.0",
]
openai = [
    "openai>=1.0.0",
]
voyage = [
    "voyageai>=0.3.0",
]
docs = [
    "python-docx>=1.0.0",
    "openpyxl>=3.1.0",
]
mcp = [
    "mcp>=1.0.0",
]
all = [
    "doc-intelligence[images,dashboard,ai,openai,voyage,docs,mcp]",
]

[project.scripts]
doc-intelligence = "scripts.cli:main"
doc-scan = "scripts.scan:main"
doc-search = "scripts.search:main"
doc-duplicates = "scripts.find_duplicates:main"
doc-cleanup = "scripts.cleanup:main"
doc-watch = "scripts.watch:main"
doc-big-files = "scripts.big_files:main"
doc-report = "scripts.report:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
